--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.thymeleaf.cache=false
 #spring.datasource.url=jdbc:postgresql://localhost:5432/spring_bmsdb
 #spring.datasource.username=db_user
 #spring.datasource.password=123456789
+
+spring.servlet.multipart.max-file-size=10MB
