--- a/src/main/resources/project_file.properties
+++ b/src/main/resources/project_file.properties
@@ -1,2 +1,8 @@
-server.path=/images/uploads/
+#server.path=/opt/SpringBoot/images/upload/
+#For mac
+server.path=/Users/chenboly/opt/SpringBoot/images/upload/
 client.path=/images/
+
+#For windows
+#server.path=/images/
+#client.path=/images/
